--- a/styles1.css
+++ b/styles1.css
@@ -6,7 +6,7 @@
   font-family: 'Segoe UI', sans-serif;
 }
 body {
-  background: url('img.jpg') no-repeat center center/cover;
+  background: url('img2.png') no-repeat center center/cover;
   backdrop-filter: blur(3px);
   background-size: cover;
   color: #fff;
