--- a/styles1.css
+++ b/styles1.css
@@ -6,9 +6,14 @@
   font-family: 'Segoe UI', sans-serif;
 }
 body {
-  background: url('img2.png') no-repeat center center/cover;
+  background: url('img.jpg');
+   /* no-repeat center center/cover; */
+   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: center; 
   backdrop-filter: blur(3px);
-  background-size: cover;
+ 
   color: #fff;
   transition: background-color 0.3s;
 }
@@ -440,8 +445,9 @@ body.dark-mode .btn:hover {
 /* Responsive Styles for Mobile */
 @media (max-width: 768px) {
   body {
-    background-size: auto 100%;         /* Prevent zoom-in */
-    background-position: top center;  /* Align it nicely */
+    background: url(img2.png);
+    background-size: contain;         /* Prevent zoom-in */
+    background-position: center center;  /* Align it nicely */
     background-attachment: scroll;    /* Avoid glitchy scroll behavior */
   }
 
